Creacion de como se va a mostrar el horario y alguna cosa mas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="ver_horarios">Ver horarios</string>
     <string name="reuniones">Reuniones</string>
+    <string name="horario">Horario</string>
 
     <string name="lunes">LUNES</string>
     <string name="martes">MARTES</string>
