Ligeros cambios en la app movil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="send_object">Logout</string>
 
     <string name="ver_horarios">Ver horarios</string>
-    <string name="reuniones">Reuniones</string>
+    <string name="ver_reuniones">Ver reuniones</string>
     <string name="horario">Horario</string>
 
     <string name="lunes">LUNES</string>
